# yew-template-buzz

./: Cargo.toml  README.md  index.html  index.scss  output.txt
src/: app.rs  main.rs
src/components/: mod.rs
src/components/common/header/: mod.rs  style.rs
src/components/hello_word/: mod.rs  style.rs
src/core/: route.rs
src/layouts/main_layout/: mod.rs
src/pages/: mod.rs
src/pages/auth/login/: mod.rs
src/pages/home/: mod.rs
