[package]
name = "yew"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.14.0"
axum = "0.6.16"
shuttle-axum = "0.14.0"
tokio = "1.27.0"
yew = { version = "0.20", features = ["csr"] }