[package]
name = "yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
yew = { version = "0.20", features = ["csr"] }
stylist = {version = "0.12", features = ["yew"]}
yew-router = "0.17"
gloo = "0.8"
